{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 16,
  "lineage": "0bf13489-de22-f365-3f32-506b4429c6df",
  "resources": [
    {
      "module": "module.atlantis",
      "mode": "data",
      "type": "aws_subnet",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:131578276461:subnet/subnet-0098e0f4cfa5ca36f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.67.0/24",
            "default_for_az": false,
            "id": "subnet-0098e0f4cfa5ca36f",
            "map_public_ip_on_launch": false,
            "owner_id": "131578276461",
            "state": "available",
            "tags": {
              "Name": "private-subnet-4"
            },
            "vpc_id": "vpc-1048ee79"
          }
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:131578276461:vpc/vpc-1048ee79",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-896099e0",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-60c26109",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1048ee79",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-2158f448",
            "owner_id": "131578276461",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_eip",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d1890b6a1783b61e",
            "public_dns": "ec2-3-135-2-197.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.2.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "atlantis-elastic-ip-47219c34"
            },
            "vpc": true
          },
          "dependencies": [
            "module.atlantis.random_id.self"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_instance",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0330cb0bcf1fdadf8",
            "arn": "arn:aws:ec2:us-east-2:131578276461:instance/i-045eb9881c9459ecd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "atlantis-47219c34",
            "id": "i-045eb9881c9459ecd",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "key_name": "atlantis-keypair-47219c34",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06e5ef59a18a26307",
            "private_dns": "ip-172-31-67-5.us-east-2.compute.internal",
            "private_ip": "172.31.67.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:131578276461:key/d17c9cd8-c32a-495f-86bc-86774aededb5",
                "volume_id": "vol-0004cd52b5b250135",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "atlantis-secgroup-47219c34"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0098e0f4cfa5ca36f",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "atlantis-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e015f43b20420206"
            ]
          },
          "dependencies": [
            "module.atlantis.aws_iam_instance_profile.self",
            "module.atlantis.aws_iam_role.atlantis",
            "module.atlantis.aws_key_pair.self",
            "module.atlantis.aws_security_group.self",
            "module.atlantis.data.aws_ami.focal",
            "module.atlantis.data.aws_iam_policy_document.ec2_trust_policy",
            "module.atlantis.data.aws_subnet.self",
            "module.atlantis.data.aws_subnet_ids.default",
            "module.atlantis.random_id.self"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:131578276461:security-group/sg-0e015f43b20420206",
            "description": "Security group to allow network inbound and outbound communication for Atlantis",
            "egress": [],
            "id": "sg-0e015f43b20420206",
            "ingress": [],
            "name": "atlantis-secgroup-47219c34",
            "name_prefix": null,
            "owner_id": "131578276461",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "atlantis-secgroup-47219c34"
            },
            "timeouts": null,
            "vpc_id": "vpc-1048ee79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.data.aws_subnet.self",
            "module.atlantis.random_id.self"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2535222920",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e015f43b20420206",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.aws_security_group.self",
            "module.atlantis.data.aws_subnet.self",
            "module.atlantis.random_id.self"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2086985638",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e015f43b20420206",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.aws_security_group.self",
            "module.atlantis.data.aws_subnet.self",
            "module.atlantis.random_id.self"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1209191100",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e015f43b20420206",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.aws_security_group.self",
            "module.atlantis.data.aws_subnet.self",
            "module.atlantis.random_id.self"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3404628499",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e015f43b20420206",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.aws_security_group.self",
            "module.atlantis.data.aws_subnet.self",
            "module.atlantis.random_id.self"
          ]
        }
      ]
    }
  ]
}